# ci-manager

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  dispatched_system_test.yml  fail_on_purpose.yml  release.yml  system_test.yml
scripts/: check_version_tag.just  cranelift.just  fast_compile.just  install.sh  package.bash  pretty_print.just  test_coverage.just  util.just
src/: ci_provider.rs  config.rs  err_parse.rs  issue.rs  lib.rs  main.rs  run.rs  util.rs
src/ci_provider/: github.rs  gitlab.rs  util.rs
src/ci_provider/github/: util.rs
src/config/: commands.rs
src/config/commands/: locate_failure_log.rs
src/err_parse/: yocto.rs
src/err_parse/yocto/: util.rs
src/issue/: similarity.rs
tests/: ci_manager.rs
tests/util/: mod.rs
