[package]
name = "ci-manager"
version = "0.5.2"
documentation = "https://docs.rs/ci-manager"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["CLI", "CI", "tool"]
description = "Parse GitHub/GitLab workflows and do stuff like create issues"
categories = ["command-line-utilities"]
authors = ["Marc Beck König <mki@skytem.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.0", features = ["derive"] }
clap_complete = "4.5.1"
gitlab = "0.1610.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["raw_value"] }
strum = { version = "0.26", features = ["derive"] }
log = "0.4.20"
distance = "0.4.0"
regex = "1.10.3"
stderrlog = "0.6.0"
octocrab = "0.42.1"
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["full"] }
zip = "2.1.6"
time = { version = "0.3.34", features = ["parsing", "macros", "serde"] }
hyper = "1.2.0"
http-body-util = "0.1.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
temp-dir = "0.1.11"
assert_fs = "1.0.13"
assert_cmd = "2.0.11"
predicates = "3.0.3"

[profile.release]
lto = false
codegen-units = 32

# The public documentation is minimal and doesn't change between
# platforms, so we only build them for linux on docs.rs to save
# their build machines some cycles.
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
